Bug 30336 - MX Revolution quick flip button does not work.
Summary: MX Revolution quick flip button does not work.
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/evdev (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Peter Hutterer
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-22 23:12 UTC by Kouichi ONO
Modified: 2010-10-23 04:39 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
evdev patch (489 bytes, patch)
2010-09-22 23:12 UTC, Kouichi ONO
no flags Details | Splinter Review
output of evtest (2.93 KB, text/plain)
2010-10-19 09:41 UTC, Kouichi ONO
no flags Details
Proposed fix, to be reviewed by Peter (1.85 KB, patch)
2010-10-20 12:38 UTC, Nikolai Kondrashov
no flags Details | Splinter Review

Description Kouichi ONO 2010-09-22 23:12:17 UTC
Created attachment 38893 [details] [review]
evdev patch

MX Revolution was recognized as 20 button mouse and assigned quick flip button to button 13, 15, 17.
But after update evdev to git head, MX Revolution is recognized as 12 button mouse, and quick flip button does not work (other buttons work well).
Revert commit 0367e3871f02993b4ce04873d6e40df16fb0a202 partly, problem fixed.
Comment 1 Peter Hutterer 2010-10-17 15:26:04 UTC
please attach the evtest output for the device. thanks
Comment 2 Kouichi ONO 2010-10-19 09:41:23 UTC
Created attachment 39543 [details]
output of evtest

test on linux-2.6.36-rc7
Comment 3 Nikolai Kondrashov 2010-10-20 12:38:03 UTC
Created attachment 39591 [details] [review]
Proposed fix, to be reviewed by Peter

Thanks for reporting it, Kouichi.

I think this patch should fix it properly, though I didn't test it, not having such a device myself.
Comment 4 Peter Hutterer 2010-10-21 15:19:58 UTC
pushed as 5e26ba8641809addc63e783e1cefac0f8524b020, thanks.
Comment 5 Nikolai Kondrashov 2010-10-21 23:18:55 UTC
Kouichi, would it be too much to ask you to dump your mouse HID report descriptor, so that I could account for similar devices later?

You could use debugfs or usbhid-dump [1] to dump it.

Thanks.

[1] http://digimend.sourceforge.net/#proj-usbhid-dump
Comment 6 Max Schwarz 2010-10-22 10:04:19 UTC
Here is the HID descriptor of my MX Revolution:

$ lsusb
[...]
Bus 006 Device 002: ID 046d:c525 Logitech, Inc. MX Revolution Cordless Mouse
[...]
$ ./usbhid-dump 6 2
000:DESCRIPTOR                 1287766738.507791
 05 01 09 02 A1 01 09 01 A1 00 05 09 19 01 29 10
 15 00 25 01 95 10 75 01 81 02 05 01 16 01 80 26
 FF 7F 75 10 95 02 09 30 09 31 81 06 15 81 25 7F
 75 08 95 01 09 38 81 06 05 0C 0A 38 02 95 01 81
 06 C0 C0

001:DESCRIPTOR                 1287766738.510823
 05 0C 09 01 A1 01 85 03 75 10 95 02 15 01 26 8C
 02 19 01 2A 8C 02 81 00 C0 06 00 FF 09 01 A1 01
 85 10 75 08 95 06 15 00 26 FF 00 09 01 81 00 09
 01 91 00 C0 06 00 FF 09 02 A1 01 85 11 75 08 95
 13 15 00 26 FF 00 09 02 81 00 09 02 91 00 C0
Comment 7 Kouichi ONO 2010-10-23 00:14:13 UTC
My result of usbhid-dump:

# lsusb
(snip)
Bus 001 Device 003: ID 046d:c525 Logitech, Inc. MX Revolution Cordless Mouse

# ./usbhid-dump 1 3
000:DESCRIPTOR                 1287817670.990976
 05 01 09 02 A1 01 09 01 A1 00 05 09 19 01 29 10
 15 00 25 01 95 10 75 01 81 02 05 01 16 01 80 26
 FF 7F 75 10 95 02 09 30 09 31 81 06 15 81 25 7F
 75 08 95 01 09 38 81 06 05 0C 0A 38 02 95 01 81
 06 C0 C0

001:DESCRIPTOR                 1287817670.991921
 05 0C 09 01 A1 01 85 03 75 10 95 02 15 01 26 8C
 02 19 01 2A 8C 02 81 00 C0 06 00 FF 09 01 A1 01
 85 10 75 08 95 06 15 00 26 FF 00 09 01 81 00 09
 01 91 00 C0 06 00 FF 09 02 A1 01 85 11 75 08 95
 13 15 00 26 FF 00 09 02 81 00 09 02 91 00 C0

Thanks.
Comment 8 Nikolai Kondrashov 2010-10-23 04:39:58 UTC
Thank you Max and Kouichi.
You don't often see a mouse with two HID interfaces and these are pretty unusual descriptors.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.